# kaleido3d

./: .gitignore  .travis.yml
Data/Test/: TestMaterial.hlsl
Project/: FindV8.cmake
Project/android/: build.gradle  settings.gradle
Project/android/Renderer/: build.gradle
Project/android/Triangle/: build.gradle
Project/android/Triangle-2/: build.gradle
Project/android/Triangle-3/: build.gradle
Project/android/Triangle-3/src/main/: AndroidManifest.xml
Project/android/Triangle-3/src/main/jni/: SampleRHI.cpp  SampleRHI.h
Project/android/Triangle-3/src/main/res/values/: strings.xml
Project/android/gradle/wrapper/: gradle-wrapper.properties
Source/: CMakeLists.txt
Source/Core/: File.cpp
Source/Platform/Android/: AndroidApp.cpp
Source/RHI/: IRHI.h  IRHIDefs.h
Source/RHI/D3D12/Private/: D3D12PipelineState.cpp
Source/RHI/D3D12/Public/: D3D12RHI.h
Source/RHI/Vulkan/: CMakeLists.txt  VkCommon.h
Source/RHI/Vulkan/Private/: VkImpl.cpp  VkPipelineState.cpp  VkRenderPass.cpp  VkResource.cpp
Source/RHI/Vulkan/Public/: DynVulkanLoader.cpp  DynVulkanLoader.h  VkRHI.cpp  VkRHI.h
Source/Renderer/: CMakeLists.txt  Render.h  RenderContext.cpp  V8Engine.cpp  V8Engine.h
Source/Tools/ShaderGen/: CMakeLists.txt  DXCompiler.cc  DXCompiler.h  GLSLCompiler.cc  GLSLCompiler.h  ShaderCompiler.h
Source/UnitTest/: CMakeLists.txt  UTShaderCompiler.cpp
Source/UnitTest/3.Triangle/: Triangle.cpp
